fixed flex wrap issue on course page

--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -261,6 +261,7 @@
     .course {
         &__cards {
             justify-content: space-around;
+            flex-flow: row wrap;
         }
     }
 }
