--- a/src/sass/blocks/course/_course.scss
+++ b/src/sass/blocks/course/_course.scss
@@ -25,7 +25,7 @@
     &__cards {
         display: flex;
         justify-content: space-between;
-        flex-flow: row wrap;
+        flex-flow: row nowrap;
         list-style: none;
         &-card {
             margin: 58px 25px 0 0;
